objects/MDPERSONATOR__MD_personatorResponseAux__c.object
<CustomObject>
    <description>An object that stores the XML Response from the Personator Web Service. (for MD Property)</description>
    <fields>
        <fullName>MDPERSONATOR__AddressKey__c</fullName>
        <label>AddressKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <label>Results</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TransmissionResults__c</fullName>
        <label>TransmissionResults</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Version__c</fullName>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__contactIdExtID__c</fullName>
        <externalId>true</externalId>
        <label>contactIdExtID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MD_personatorResponseAux</label>
    <nameField>
        <label>MD_personatorResponseAux Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_personatorResponseAuxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>